--- a/main.html
+++ b/main.html
@@ -4,10 +4,48 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p style="color: #979CB3;">List of all transcations</p>
+	 <table class="table font-monospace">
+    <thead class="table-dark">
+      <tr>
+		<th>#</th>
+        <th>From</th>
+        <th>To</th>
+        <th>Amount($)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+		<td class="fw-bold">1</td>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>1000</td>
+      </tr>
+      <tr>
+		<td class="fw-bold">2</td>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>1500</td>
+      </tr>
+      <tr>
+		<td class="fw-bold">3</td>
+        <td>Jack</td>
+        <td>John</td>
+        <td>2000</td>
+      </tr>
+	  <tfoot class="dark">
+		  <td></td>
+		  <td></td>
+		  <td id="total" class="fw-bold text-end">Total</td>
+		  <td class="fw-bold">4000</td>
+	  </tfoot>
+    </tbody>
+  </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
