--- a/main.html
+++ b/main.html
@@ -40,9 +40,7 @@
         <td>2000</td>
       </tr>
 	  <tfoot class="table-light">
-		  <td></td>
-		  <td></td>
-		  <td id="total" class="colspan fw-bold text-end">Total</td>
+		  <td colspan="3" id="total" class="fw-bold text-end">Total</td>
 		  <td class="fw-bold">4000</td>
 	  </tfoot>
     </tbody>
